added new language symbols and looking into image margin issue

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> 	
-
+		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 
 		<script src="https://use.fontawesome.com/81c406da02.js"></script>
@@ -28,16 +28,16 @@
 				    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					    <ul class="nav navbar-nav">
 					        <li>
-					        	<a href="#edu">About<span class="sr-only">(current)</span></a>
+					        	<a href="#about">About<span class="sr-only">(current)</span></a>
 					        </li>
 					        <li>
-					        	<a href="#work">Skills</a>
+					        	<a href="#skills">Skills</a>
 					        </li>
 					        <li>
-					        	<a href="#tech">Projects</a>
+					        	<a href="#projects">Projects</a>
 					        </li>
 					        <li>
-					        	<a href="#honors">Contact</a>
+					        	<a href="#contact">Contact</a>
 					        </li>				      
 					        <li class="dropdown">
 					          	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resume<span class="caret"></span></a>
@@ -66,11 +66,12 @@
 					<div class="row" id="about">
 						<div class="col-sm-3">
 							<h3>About Me</h3>	
+							ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
+							ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
+							ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
 						</div>
-						<div class="col-sm-9">
-							<div class="container">						
-								<!-- <img src="images/Dana.jpg" class="icon" id="me"> -->
-							</div>	
+						<div class="col-sm-9">									
+							<!-- <img src="images/Dana.jpg" class="icon" id="me"> -->					
 						</div>
 					</div>
 			</div>
@@ -83,28 +84,25 @@
 					</div>	
 					<div class="col-sm-9">
 					   <!--Java logo and JS logo source: https://www.iconfinder.com/iconsets/scripting-and-programming-languages-->
-					   <div class="icon-row">
-					     	<div class="col-xs-4">
-								<img src="images/fitting-Java-logo.png" class="icon">
+					   <div class="icon-row row">
+					     	<div class="col-lg-4 col-xs-12">
+								<img src="images/html5 (2).png">
 							</div>
-							<div class="col-xs-4">
-								<i class="fa fa-html5 fa-3x" aria-hidden="true"></i>
+							<div class="col-lg-4 col-xs-12">
+								<img src="images/css.png">
 							</div>
-							<div class="col-xs-4">
-								<img src="images/fitting-JS-logo.png">
+							<div class="col-lg-4 col-xs-12">
+								<img src="images/JS.png">
 							</div>
 					   </div>
-					   <div class="icon-row" id="icon-labels">
+					   <!-- <div class="icon-row row" id="icon-labels">
 					   		<div class="col-xs-4">
-								Java
-							</div> 
-							<div class="col-xs-4">
 								HTML5 
 							</div>
 							<div class="col-xs-4">
-								JavaScript
+								
 							</div>
-					   </div>
+					   </div> -->
 					</div>
 				</div>
 			</div>
@@ -121,8 +119,8 @@
 			</div>
 
 			<footer id="contact">
-
 				<h3>Get in Touch</h3>	
+				
 			</footer>
 
 
