--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					        	<a href="#about">About<span class="sr-only">(current)</span></a>
 					        </li>
 					        <li>
-					        	<a href="#skills">Skills</a>
+					        	<a href="#languages">Languages</a>
 					        </li>
 					        <li>
 					        	<a href="#projects">Projects</a>
@@ -78,9 +78,9 @@
 
 	      	<!--Skills-->
 	        <div class="container-fluid">
-	       		<div class="row" id="skills">
+	       		<div class="row" id="languages">
 	       			<div class="col-sm-3">
-						<h3>Skills</h3>
+						<h3>Languages</h3>
 					</div>	
 					<div class="col-sm-9">
 					   <!--Java logo and JS logo source: https://www.iconfinder.com/iconsets/scripting-and-programming-languages-->
