--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					   <!--Java logo and JS logo source: https://www.iconfinder.com/iconsets/scripting-and-programming-languages-->
 					   <div class="icon-row row">
 					     	<div class="col-lg-3 col-lg-offset-2 col-sm-12">
-								<img src="images/html5 (2).png">
+								<img src="images/html5.png">
 							</div>
 							<div class="col-lg-3 col-xs-12">
 								<img src="images/css.png">
@@ -105,31 +105,29 @@
 						<span class="title text-center">Projects</span>
 					</div>
 				</div>
-				<div class="row">
-					    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-							<div class="row">
-								<span class="col-lg-12 col-xs-12 name">Weather App</span>
+				<div class="row text-center project-row">
+					   
+							<div class="col-md-6">
+								<span class="name">Weather App</span>
+								<img class="image-responsive project-image" src="images/weather.png">
 							</div>
-							<div class="row">
-								<img class="col-lg-12 col-xs-12 apps" src="images/weather.png">
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-							<div class="row">
+						
+						<!-- <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"> -->
+							<!-- <div class="row">
 								<span class="col-lg-12 col-xs-12 name">Project2</span>
 							</div>
 							<div class="row">
 								<div class="project apps"></div>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-							<div class="row">
+							</div> -->
+						<!-- </div>
+						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12"> -->
+							<!-- <div class="row">
 								<span class="col-lg-12 col-xs-12 name">Project3</span>
 							</div>
 							<div class="row">
 								<div class="project"></div>
 							</div>
-						</div>
+						</div> -->
 				</div>
 			</div>
 					<!-- <div class="row">	
