--- a/index.html
+++ b/index.html
@@ -101,14 +101,24 @@
 
 			<div class="container-fluid" id="projects">
 				<div class="row">
-					<div class="col-sm-offset-5">
-						<span class="title text-center">Projects</span>
+					<div class="">
+						<h1 class="section-header">Projects</h1>
 					</div>
 				</div>
 				<div class="row text-center project-row">
 					   
-							<div class="col-md-6">
-								<span class="name">Weather App</span>
+							<div class="col-md-6 project">
+								<span class="name">Weather App</span><br>
+								<img class="project-image image-responsive" src="images/weather.png">
+							</div>
+
+							<div class="col-md-6 project">
+								<span class="name">Weather App</span><br>
+								<img class="image-responsive project-image" src="images/weather.png">
+							</div>
+
+							<div class="col-md-6 project">
+								<span class="name">Weather App</span><br>
 								<img class="image-responsive project-image" src="images/weather.png">
 							</div>
 						
