trying to find what's causing a small gap on the right side of the page

--- a/index.html
+++ b/index.html
@@ -57,22 +57,22 @@
 						<h1>Dana C. Ottaviani</h1>
 				</div>			
 			</div>
-
-		    <p>
-		    	<a href="https://www.pexels.com/photo/flight-nature-sky-flying-36487/" target="_blank">Image source</a>
-		    </p> 
+			
+			<div class="container-fluid" id="about">
+		    	<p>
+		    		<a href="https://www.pexels.com/photo/flight-nature-sky-flying-36487/" target="_blank">Image source</a>
+		    	</p> 
 	
-		    <div class="container-fluid" id="about">
-					<div class="row">
-						<div class="text-center">
-							<span class="section-header">About Me</span>
-						</div>	
-					</div>
+				<div class="row">
+					<div class="text-center">
+						<span class="section-header">About Me</span>
+					</div>	
 					<div class="row text-center">
-						<div class="col-md-12">
+						<div class="">
 							<img src="images/Dana.jpg" class="profile-pic">	
-						</div>	
-					</div>				
+						</div>
+					</div>	
+				</div>				
 			</div>
 
 	      	<!--Skills-->
