added contact icons and fixed language positioning for mobile

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
 			<div class="parallax-window" data-parallax="scroll" data-image-src="images/above-adventure-aerial-air.jpg" id="head-window">
-				<div class="col-sm-6 col-sm-offset-3" id="name-div">
+				<div class="col-sm-6" id="name-div">
 						<h1>Dana C. Ottaviani</h1>
 				</div>			
 			</div>
@@ -69,7 +69,7 @@
 					</div>	
 					<div class="row text-center">
 						<div class="">
-							<img src="images/Dana.jpg" class="profile-pic">	
+							<img src="images/Dana.jpg" class="profile-pic">
 						</div>
 					</div>	
 				</div>				
@@ -83,14 +83,14 @@
 					</div>
 				</div>	
 				<div class="row text-center icon-row">
-					   <!--Java logo and JS logo source: https://www.iconfinder.com/iconsets/scripting-and-programming-languages-->
-				  	<div class="col-md-4">
+					<!-- Java logo and JS logo source: https://www.iconfinder.com/iconsets/scripting-and-programming-languages -->
+				  	<div class="col-md-4 col-sm-4 col-xs-4">
 						<img src="images/html5.png">
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 col-sm-4 col-xs-4">
 						<img src="images/css.png">
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 col-sm-4 col-xs-4">
 						<img src="images/JS.png">
 					</div>
 				</div>
@@ -118,8 +118,16 @@
 				</div>
 			</div>				
 
-			<footer id="contact">
-				<h3>Get in Touch</h3>					
+			<footer id="contact" class="text-center">
+				<span class="section-header">Get in Touch</span>
+				<div class="row">
+					<a href="tel:+8607974288"><i class="fa fa-phone fa-3x" aria-hidden="true"></i></a>
+				    <a href="mailto:dana.ottaviani@gmail.com"><i class="fa fa-envelope fa-3x" aria-hidden="true"></i></a>
+				    <a href="https://www.linkedin.com/in/danaottaviani" target="_blank"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
+				    <a href="https://github.com/Dana94" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+				    <a href="https://www.freecodecamp.com/dana94" target="_blank"><i class="fa fa-free-code-camp fa-3x" aria-hidden="true"></i> 	
+				    </a>	
+				</div>			
 			</footer>
 
 
