changed weather.png to weather.PNG so the images would show and fixed the extra margin on the right

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 					<div class="text-center">
 						<span class="section-header">About Me</span>
 					</div>	
-					<div class="row text-center">
-						<div class="">
+					<div class="text-center">
+						
 							<img src="images/Dana.jpg" class="profile-pic">
-						</div>
-					</div>	
+						
+					</div>
 				</div>				
 			</div>
 
@@ -105,20 +105,20 @@
 				<div class="row text-center project-row">					   
 					<div class="col-md-6 project">
 						<span class="name">Weather App</span><br>
-						<img class="project-image image-responsive" src="images/weather.png">
+						<img class="project-image image-responsive" src="images/weather.PNG">
 					</div>
 					<div class="col-md-6 project">
 						<span class="name">Weather App</span><br>
-						<img class="image-responsive project-image" src="images/weather.png">
+						<img class="image-responsive project-image" src="images/weather.PNG">
 					</div>
 					<div class="col-md-6 project">
 						<span class="name">Weather App</span><br>
-						<img class="image-responsive project-image" src="images/weather.png">
+						<img class="image-responsive project-image" src="images/weather.PNG">
 					</div>
 				</div>
 			</div>				
 
-			<footer id="contact" class="text-center">
+			<footer class="container-fluid text-center" id="contact">
 				<span class="section-header">Get in Touch</span>
 				<div class="row">
 					<a href="tel:+8607974288"><i class="fa fa-phone fa-3x" aria-hidden="true"></i></a>
