added the weather app modal

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				<div class="row text-center project-row">					   
 					<div class="col-md-6 project">
 						<span class="name">Weather App</span><br>
-						<img class="project-image image-responsive" src="images/weather.PNG">
+						<img class="project-image image-responsive" src="images/weather.PNG" data-toggle="modal" data-target="#weather-modal">
 					</div>
 					<div class="col-md-6 project">
 						<span class="name">Weather App</span><br>
@@ -116,13 +116,50 @@
 						<img class="image-responsive project-image" src="images/weather.PNG">
 					</div>
 				</div>
-			</div>				
+			</div>	
+
+			<!--Weather App Info-->
+			<div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="gridSystemModalLabel" id="weather-modal">
+			  <div class="modal-dialog" role="document">
+			    <div class="modal-content">
+			      <div class="modal-header">
+			        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+			        <h4 class="modal-title" id="gridSystemModalLabel">Weather App</h4>
+			      </div>
+			      <div class="modal-body">
+			        <div class="row">
+			        	<div class="col-md-12">ddd
+			        		<img class="image-responsive" src="images/weather.PNG">
+			        	</div>			          
+			        </div>
+			        <div class="row">
+			        	<div class="col-md-12 description">
+			        		This was the first assignment I was given when working through <a href="https://www.freecodecamp.org/" target="_blank">Free Code Camp</a>. The app will show the current weather and temperature in your location as well as an icon and background expressing it. 
+			        	</div>
+			        </div>
+			        <div class="row">
+			        	<div class="col-md-4">
+			        		<a href="https://github.com/Dana94/weather-app" target="_blank">Source Code</a>
+			        	</div>
+			        </div>
+			        <div class="row">
+ 						<div class="col-md-4">
+ 							<a href="https://dana94.github.io/weather-app/" target="_blank">See It Live</a>
+ 						</div>
+			        </div>			        
+			      </div>
+			      <div class="modal-footer">
+			        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+			      </div>
+			    </div>
+			  </div>
+			</div>		
 
 			<footer class="container-fluid text-center" id="contact">
 				<span class="section-header">Get in Touch</span>
 				<div class="row">
-					<a href="tel:+8607974288"><i class="fa fa-phone fa-3x" aria-hidden="true"></i></a>
-				    <a href="mailto:dana.ottaviani@gmail.com"><i class="fa fa-envelope fa-3x" aria-hidden="true"></i></a>
+					<a href="tel:+8607974288" target="_blank"><i class="fa fa-phone fa-3x" aria-hidden="true"></i></a>
+				    <a href="mailto:dana.ottaviani@gmail.com" target="_blank"><i class="fa fa-envelope fa-3x" aria-hidden="true"></i></a>
 				    <a href="https://www.linkedin.com/in/danaottaviani" target="_blank"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
 				    <a href="https://github.com/Dana94" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
 				    <a href="https://www.freecodecamp.com/dana94" target="_blank"><i class="fa fa-free-code-camp fa-3x" aria-hidden="true"></i> 	
