added images-slideshow picture

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						
 					</div>
 					<div class="text-center" id="about-me">
-							I have an interest in the fron-end aspect of programming. I also believe in having a solid foundation of server-side can benefit me as well, so I motivate myself to work on that as well. I also set time aside to draw and learn animation...
+							I have an interest in the front-end aspect of programming. I also believe in having a solid foundation of server-side can benefit me as well, so I motivate myself to work on that as well. I also set time aside to draw and learn animation...
 							The projects below show you what my interests are, I have future plans for some of them, as well as others I plan to leave as they are. I believe in showing progresss with my work instead of keeping all the unfinished pieces locked up until I think I'll be ready to show them to others. But, really, if I wait for them to be considered "perfect", then I guess that time will never come, right? 
 					</div>
 				</div>				
@@ -108,6 +108,8 @@
 						<div class="text-center">
 							<span class="section-header">Completed Projects</span>
 						</div>
+					</div>
+					<div class="row">
 						<div class="col-xs-12 text-center">
 							<button class="btn" id="view-in-progress">
 								<span class="project-section">View Ongoing Projects</span>
@@ -136,6 +138,9 @@
 						<div class="text-center">
 							<span class="section-header">In Progress Projects</span>
 						</div>
+						<div class="projects-summary text-center">
+							Even though these are not yet functional, I thought it would benefit to display the design I have applied to these projects.
+						</div>
 					</div>
 					<div class="row">
 						<div class="text-center">
@@ -146,8 +151,8 @@
 					</div>
 					<div class="row text-center project-row">					   
 						<div class="col-md-6 project">
-							<span class="name">Weather App</span><br>
-							<img class="project-image image-responsive" src="images/weather.PNG" data-toggle="modal" data-target="#weather-modal">
+							<span class="name">Image Slideshow</span><br>
+							<img class="project-image image-responsive" src="images/image-slideshow.PNG" data-toggle="modal" data-target="#">
 						</div>
 						<div class="col-md-6 project">
 							<span class="name">Weather App</span><br>
