added the clocks image, need to decide on more html files for holding modals and such or else this file is going to be extremely long

--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
 						<div class="text-center">
 							<span class="section-header">Completed Projects</span>
 						</div>
+						<div class="projects-summary text-center">
+							These projects are functional. There is always a chance that I will go back and improve the code with better techniques but for now, they serve their purpose. 
+						</div>
 					</div>
 					<div class="row">
 						<div class="col-xs-12 text-center">
@@ -155,8 +158,8 @@
 							<img class="project-image image-responsive" src="images/image-slideshow.PNG" data-toggle="modal" data-target="#">
 						</div>
 						<div class="col-md-6 project">
-							<span class="name">Weather App</span><br>
-							<img class="image-responsive project-image" src="images/weather.PNG">
+							<span class="name">Clocks</span><br>
+							<img class="image-responsive project-image" src="images/clocks.PNG">
 						</div>
 						<div class="col-md-6 project">
 							<span class="name">Weather App</span><br>
