trying AJAX example

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 
 		
-		<link rel="import" type="text/html" href="./completed_projects.html">
+		<!-- <link rel="import" type="text/html" href="./completed_projects.html"> -->
 		<!-- <link rel="import" type="text/html" href="completed_projects_modals.html">
 
 		<link rel="import" type="text/html" href="ongoing_projects.html">
