added the names of the languages below their icons

--- a/index.html
+++ b/index.html
@@ -96,13 +96,29 @@
 				<div class="row text-center icon-row">
 					<!-- Java logo and JS logo source: https://www.iconfinder.com/iconsets/scripting-and-programming-languages -->
 				  	<div class="col-md-4 col-sm-4 col-xs-4">
-						<img src="images/html5.png">
+						<div class="row">
+							<img src="images/html5.png">
+						</div>
+						<div class="row">
+							HTML5
+						</div>
+						
 					</div>
 					<div class="col-md-4 col-sm-4 col-xs-4">
-						<img src="images/css.png">
+						<div class="row">
+							<img src="images/css.png">
+						</div>
+						<div class="row">
+							CSS3
+						</div>
 					</div>
 					<div class="col-md-4 col-sm-4 col-xs-4">
-						<img src="images/JS.png">
+						<div class="row">
+							<img src="images/JS.png">
+						</div>
+						<div class="row">
+							JavaScript
+						</div>
 					</div>
 				</div>
 			</div>
