--- a/completed_projects.html
+++ b/completed_projects.html
@@ -1,6 +1,6 @@
 <!--Completed Projects Section-->
 
-	<span id="completed-projects">			
+	<template id="completed-projects"  type="text/x-handlebars-template">			
 		<div class="row">
 			<div class="text-center">
 				<span class="section-header">Completed Projects</span>
@@ -30,4 +30,4 @@
 				<img class="image-responsive project-image" src="images/weather.PNG">
 			</div>
 		</div>
-	</span>
+	</template>
