--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 
 		
-		<!-- <link rel="import" type="text/html" href="./completed_projects.html"> -->
+		<link rel="import" type="text/html" id="completed-projects-page" href="completed_projects.html">
 		<!-- <link rel="import" type="text/html" href="completed_projects_modals.html">
 
 		<link rel="import" type="text/html" href="ongoing_projects.html">
@@ -160,6 +160,8 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
 		<script src="js/app.js"></script>
+
+	
 
 	</body>
 </html>
