trying something else

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 			<!--files conatin the different status of projects and separate files for their 
 				corresponding modals-->
 			<div class="container-fluid" id="projects">	
-					
+				<div id="here"></div>
 			</div>	
 
 			<span id="modal-place"></span>	
