removed link and changed template

--- a/completed_projects.html
+++ b/completed_projects.html
@@ -1,6 +1,6 @@
 <!--Completed Projects Section-->
 
-	<template id="completed-projects"  type="text/x-handlebars-template">			
+	<template id="completed-projects">			
 		<div class="row">
 			<div class="text-center">
 				<span class="section-header">Completed Projects</span>
