--- a/ongoing_projects.html
+++ b/ongoing_projects.html
@@ -22,12 +22,12 @@
 							<img class="project-image image-responsive" src="images/image-slideshow.PNG" data-toggle="modal" data-target="#">
 						</div>
 						<div class="col-md-6 project">
-							<span class="name">Clocks</span><br>
-							<img class="image-responsive project-image" src="images/clocks.PNG">
+							<span class="name"></span><br>
+							<img class="image-responsive project-image" src="#">
 						</div>
 						<div class="col-md-6 project">
-							<span class="name">Weather App</span><br>
-							<img class="image-responsive project-image" src="images/weather.PNG">
+							<span class="name"></span><br>
+							<img class="image-responsive project-image" src="#">
 						</div>
 					</div>
 				</span>	
