added random-quote-machine image and took out unused images

--- a/ongoing_projects.html
+++ b/ongoing_projects.html
@@ -22,8 +22,8 @@
 							<img class="project-image image-responsive" src="images/image-slideshow.PNG" data-toggle="modal" data-target="#">
 						</div>
 						<div class="col-md-6 project">
-							<span class="name"></span><br>
-							<img class="image-responsive project-image" src="#">
+							<span class="name">Random Quote Machine</span><br>
+							<img class="image-responsive project-image" src="images/random_quotes.PNG" data-toggle="modal" data-target="#">
 						</div>
 						<div class="col-md-6 project">
 							<span class="name"></span><br>
