adding info to the modals

--- a/ongoing_projects.html
+++ b/ongoing_projects.html
@@ -6,7 +6,7 @@
 							<span class="section-header">In Progress Projects</span>
 						</div>
 						<div class="projects-summary text-center">
-							Even though these are not yet functional, I thought it would benefit to display the design I have applied to these projects.
+							Some of these are functional, but not in the place I want them to be yet. I thought it would benefit to display the design I have given to each of these projects.
 						</div>
 					</div>
 					<div class="row">
@@ -19,11 +19,11 @@
 					<div class="row text-center project-row">					   
 						<div class="col-md-6 project">
 							<span class="name">Image Slideshow</span><br>
-							<img class="project-image image-responsive" src="images/image-slideshow.PNG" data-toggle="modal" data-target="#">
+							<img class="project-image image-responsive" src="images/image-slideshow.PNG" data-toggle="modal" data-target="#slideshow-modal">
 						</div>
 						<div class="col-md-6 project">
 							<span class="name">Random Quote Machine</span><br>
-							<img class="image-responsive project-image" src="images/random_quotes.PNG" data-toggle="modal" data-target="#">
+							<img class="image-responsive project-image" src="images/random_quotes.PNG" data-toggle="modal" data-target="#quotes-modal">
 						</div>
 						<div class="col-md-6 project">
 							<span class="name"></span><br>
