--- a/ongoing_projects_modals.html
+++ b/ongoing_projects_modals.html
@@ -53,7 +53,7 @@
 			        </div>
 			        <div class="row">
 			        	<div class="col-md-12 description">
-			        		Another assignment I was given when working through <a href="https://www.freecodecamp.org/" target="_blank">Free Code Camp</a>. The user can view different quotes and have the ability to put them on Twitter.
+			        		Another assignment I was given when working through <a href="https://www.freecodecamp.org/" target="_blank">Free Code Camp</a>. The user can view different quotes and have the ability to post them on Twitter.
 			        	</div>
 			        </div>
 			        <div class="row">
