--- a/index.html
+++ b/index.html
@@ -89,16 +89,15 @@
 				</div>	
 				<div class="row text-center icon-row">
 					<!-- Java logo and JS logo source: https://www.iconfinder.com/iconsets/scripting-and-programming-languages -->
-				  	<div class="col-md-3 col-sm-3 col-xs-6">
+				  	<div class="col-md-3 col-sm-2 col-xs-6">
 						<div class="row">
 							<img src="images/html5.png">
 						</div>
 						<div class="row lang-label">
 							HTML5
-						</div>
-						
+						</div>					
 					</div>
-					<div class="col-md-3 col-sm-3 col-xs-6">
+					<div class="col-md-3 col-sm-2 col-xs-6">
 						<div class="row">
 							<img src="images/css.png">
 						</div>
@@ -106,7 +105,7 @@
 							CSS3
 						</div>
 					</div>
-					<div class="col-md-3 col-sm-3 col-xs-6">
+					<div class="col-md-3 col-sm-2 col-xs-6">
 						<div class="row">
 							<img src="images/JS.png">
 						</div>
@@ -114,12 +113,20 @@
 							JavaScript
 						</div>
 					</div>
-					<div class="col-md-3 col-sm-3 col-xs-6">
+					<div class="col-md-3 col-sm-2 col-xs-6">
 						<div class="row" id="bootstrap-img-row">
 							<img src="images/Boostrap_logo.svg.png">
 						</div>
 						<div class="row lang-label" id="bootstrap-label">
 							Bootstrap
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-2 col-xs-6">
+						<div class="row">
+							<img src="images/npm-logo.svg.png">
+						</div>
+						<div class="row lang-label" id="bootstrap-label">
+							npm
 						</div>
 					</div>
 				</div>
