added npm image

--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
 	        <div class="container-fluid" id="languages">
 	       		<div class="row">
 	       			<div class="text-center">
-						<span class="section-header">Languages</span>
+						<span class="section-header">Skills</span>
 					</div>
 				</div>	
 				<div class="row text-center icon-row">
 					<!-- Java logo and JS logo source: https://www.iconfinder.com/iconsets/scripting-and-programming-languages -->
-				  	<div class="col-md-3 col-sm-2 col-xs-6">
+				  	<div class="col-md-2 col-sm-2 col-sm-offset-1 col-xs-4 col-xs-offset-0">
 						<div class="row">
 							<img src="images/html5.png">
 						</div>
@@ -97,7 +97,7 @@
 							HTML5
 						</div>					
 					</div>
-					<div class="col-md-3 col-sm-2 col-xs-6">
+					<div class="col-md-2 col-sm-2 col-xs-4">
 						<div class="row">
 							<img src="images/css.png">
 						</div>
@@ -105,7 +105,7 @@
 							CSS3
 						</div>
 					</div>
-					<div class="col-md-3 col-sm-2 col-xs-6">
+					<div class="col-md-2 col-sm-2 col-xs-4">
 						<div class="row">
 							<img src="images/JS.png">
 						</div>
@@ -113,19 +113,19 @@
 							JavaScript
 						</div>
 					</div>
-					<div class="col-md-3 col-sm-2 col-xs-6">
-						<div class="row" id="bootstrap-img-row">
+					<div class="col-md-2 col-sm-2 col-xs-4">
+						<div class="row push-down-img-row">
 							<img src="images/Boostrap_logo.svg.png">
 						</div>
 						<div class="row lang-label" id="bootstrap-label">
 							Bootstrap
 						</div>
 					</div>
-					<div class="col-md-3 col-sm-2 col-xs-6">
-						<div class="row">
-							<img src="images/npm-logo.svg.png">
+					<div class="col-md-2 col-sm-2 col-xs-4">
+						<div class="row push-down-img-row">
+							<img src="images/npm-logo-new.svg.png">
 						</div>
-						<div class="row lang-label" id="bootstrap-label">
+						<div class="row lang-label" id="npm-label">
 							npm
 						</div>
 					</div>
